# stm32f411-usb-host-ps2

./: .gitignore  CMakeLists.txt  README.md
cmake/: STM32F411CEUx_FLASH.ld  startup_stm32f411xe.s
cmake/toolchain/: arm-none-eabi-gcc.cmake
include/: main.h  stm32f4xx_hal.h  system_init.h
include/hal/: stm32f4xx_it.h
include/ps2/: ps2_init.h  ps2_protocol.h  scancode_translator.h
include/usb/: keyboard_handler.h  usb_host_hid.h  usb_host_init.h
src/: main.c  system_init.c
src/hal/: stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
src/ps2/: ps2_init.c  ps2_protocol.c  scancode_translator.c
src/usb/: keyboard_handler.c  usb_host_hid.c  usb_host_init.c
